
- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Fixed #2920352: Can't disable "Restore previously open files on startup".
  (Shlomy Reinstein)

- Searching for regex "^\s*.*$" missed every second line of adjacent
  matching lines. (SF.net bug #2915720 - Kazutoshi Satoda)

}}}
{{{ API changes

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now all editPane own their bufferSet, do not share
  it with another editPane and it can never be changed.
  The scope is the same for all EditPanes (Matthieu Casanova)
  
- Status bar widget : it is now possible to use labels starting with letters
  in status bar (Matthieu Casanova)

}}}
{{{ Editing
- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

}}}
{{{ Miscellaneous

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

- Implemented feature request #2919875: Namable views. You can now specify a
  name for each view using View -> Set view title. The name is persistent in the
  perspective.xml file.

- In Hypersearchs result panel, the query string length is now limited to 100
  chars by default for display (Matthieu Casanova)

- Applied patch #2887520: Allow filtering the recent file list using file globs,
  e.g. "*.java" or "{*.c,*.h}". (Patch provided by Joerg Spieler)
}}}
}}}
